--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Introduction</artifactId>
+    <artifactId>SeleniumFrameWork</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -15,6 +15,7 @@
             <artifactId>selenium-java</artifactId>
             <version>4.22.0</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
